Added Business Layer; Fixes/Changes to Data Layer; Code still has to be cleanded up and tested